src/tui/widgets/snapshots/maestro__tui__widgets__wizard_frame__tests__validation_error_replaces_hints.snap
---
source: src/tui/widgets/wizard_frame.rs
expression: terminal.backend()
---
"╔══════════════════════════[ Step 2/10: Type Select ]══════════════════════════╗"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│Body slot                                                                     │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"                                Title is required                               "
"                                                                                "
